tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__FlowerUnlimitedF-AAAAAAAAAAAAAAAAAAAMww==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3267,
  "prerequisites": [
    3258,
    3228
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The jaded amaranthus causes mystical flowers to grow all around it. Their vibrant petals can be used for magic, so you no longer have to go foraging for mushrooms.\n\nThere §ois§r another way of getting these, but you'll have to figure that one out for yourself.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Flower!!! Unlimited Flower!!!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3258,
    3228
  ],
  "rewards": [],
  "tasks": []
}
