tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__Flowergrafting-AAAAAAAAAAAAAAAAAAAMlQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3221,
  "prerequisites": [
    3220
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The first item you want to make is the Petal Apothecary. A mushroom is needed to anoint it and give it its restorative properties.\n\nTo operate it, fill it with a bucket of water to keep the plants hydrated. After that you can add the ingredients by dropping them on top.\n\nEach craft requires some magical ingredients, but also one or more regular flowers from the world that can function as a stable base. Once you've added all the ingredients, finish the craft by adding a seed. Any vanilla seed will do.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Flower Grafting",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3220
  ],
  "rewards": [],
  "tasks": []
}
