tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__HydrobotanicEner-AAAAAAAAAAAAAAAAAAAMtw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3255,
  "prerequisites": [
    3262
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mana is blue. Water is also blue. There's a correlation there, and the hydroangea turns that correlation into causation. Place a water source block nearby, and the hydroangea will consume it to produce mana - until it dies after an hour.\n\nThis one can be a bit tricky to automate given the lack of naturally-regenerating source blocks.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Hydrobotanic Energy",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3262
  ],
  "rewards": [],
  "tasks": []
}
